{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 191,
  "lineage": "70ba772f-ce45-8f1d-39e4-8888922ad4b4",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:654654583337:security-group/sg-091335864c025933e",
            "description": "Security group for EKS Cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-091335864c025933e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow Jenkins EC2 to access EKS API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02ede09f4f1bcd09e",
                  "sg-0b1c211d71d987525"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eks_cluster_sg",
            "name_prefix": "",
            "owner_id": "654654583337",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "NexChange-EKS-Cluster-cluster-sg"
            },
            "tags_all": {
              "Name": "NexChange-EKS-Cluster-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba00ae94c7bef3c4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.NexChange_dev_vpc_1_sg",
            "module.security_group.aws_security_group.ec2_jenkins_sg_name",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-047126e50991d067b",
            "arn": "arn:aws:ec2:ap-southeast-1:654654583337:instance/i-09a2ef3eb754e253b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "Jenkins Server Volume"
                },
                "tags_all": {
                  "Name": "Jenkins Server Volume"
                },
                "throughput": 0,
                "volume_id": "vol-035d33db1c6bb66c3",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "Jenkins_EC2_Role",
            "id": "i-09a2ef3eb754e253b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "NexChange-dev-devops-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01810cc23e1e64a92",
            "private_dns": "ip-11-0-1-75.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.1.75",
            "public_dns": "ec2-18-143-171-49.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.143.171.49",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0165f0915d62f5cf8",
                "volume_size": 40,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b857427f5f230a33",
            "tags": {
              "Name": "NexChange Jenkins Server: Ubuntu EC2"
            },
            "tags_all": {
              "Name": "NexChange Jenkins Server: Ubuntu EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02ede09f4f1bcd09e",
              "sg-0713280e69de8793d",
              "sg-0b1c211d71d987525"
            ]
          },
          "dependencies": [
            "module.networking.aws_subnet.NexChange_dev_public_subtets",
            "module.networking.aws_vpc.NexChange_dev_vpc_1_sg",
            "module.security_group.aws_security_group.ec2_jenkins_sg_name",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "NexChange_dev_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e533f472249ca77d",
            "arn": "arn:aws:ec2:ap-southeast-1:654654583337:elastic-ip/eipalloc-0e533f472249ca77d",
            "association_id": "eipassoc-071345a52f80ee925",
            "domain": "vpc",
            "id": "eipalloc-0e533f472249ca77d",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-05f138c7f47d5da69",
            "private_dns": "ip-11-0-1-4.ap-southeast-1.compute.internal",
            "private_ip": "11.0.1.4",
            "public_dns": "ec2-52-76-250-4.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.76.250.4",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "NexChange_dev_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:654654583337:internet-gateway/igw-0c33ca9555d478c95",
            "id": "igw-0c33ca9555d478c95",
            "owner_id": "654654583337",
            "tags": {
              "Environment": "dev",
              "IsDefault": "true",
              "Name": "NexChange_dev_igw"
            },
            "tags_all": {
              "Environment": "dev",
              "IsDefault": "true",
              "Name": "NexChange_dev_igw"
            },
            "vpc_id": "vpc-0ba00ae94c7bef3c4"
          },
          "dependencies": [
            "module.networking.aws_vpc.NexChange_dev_vpc_1_sg"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NexChange_dev_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e533f472249ca77d",
            "association_id": "eipassoc-071345a52f80ee925",
            "connectivity_type": "public",
            "id": "nat-0723f609fd04b5ccd",
            "network_interface_id": "eni-05f138c7f47d5da69",
            "private_ip": "11.0.1.4",
            "public_ip": "52.76.250.4",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b857427f5f230a33"
          },
          "dependencies": [
            "module.networking.aws_eip.NexChange_dev_eip",
            "module.networking.aws_subnet.NexChange_dev_public_subtets",
            "module.networking.aws_vpc.NexChange_dev_vpc_1_sg"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "NexChange_dev_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:654654583337:route-table/rtb-00cde3023476fd4a2",
            "id": "rtb-00cde3023476fd4a2",
            "owner_id": "654654583337",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0723f609fd04b5ccd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "IsDefault": "true",
              "Name": "NexChange_dev_private_route_table"
            },
            "tags_all": {
              "Environment": "dev",
              "IsDefault": "true",
              "Name": "NexChange_dev_private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba00ae94c7bef3c4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.NexChange_dev_eip",
            "module.networking.aws_nat_gateway.NexChange_dev_nat",
            "module.networking.aws_subnet.NexChange_dev_public_subtets",
            "module.networking.aws_vpc.NexChange_dev_vpc_1_sg"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "NexChange_dev_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:654654583337:route-table/rtb-07c18ec17a56adf09",
            "id": "rtb-07c18ec17a56adf09",
            "owner_id": "654654583337",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c33ca9555d478c95",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "IsDefault": "true",
              "Name": "NexChange_dev_public_route_table"
            },
            "tags_all": {
              "Environment": "dev",
              "IsDefault": "true",
              "Name": "NexChange_dev_public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba00ae94c7bef3c4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.NexChange_dev_igw",
            "module.networking.aws_vpc.NexChange_dev_vpc_1_sg"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "NexChange_dev_private_route_table_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1ea98db121e1b23",
            "route_table_id": "rtb-00cde3023476fd4a2",
            "subnet_id": "subnet-0cf889e7130c0b2ca"
          },
          "dependencies": [
            "module.networking.aws_eip.NexChange_dev_eip",
            "module.networking.aws_nat_gateway.NexChange_dev_nat",
            "module.networking.aws_route_table.NexChange_dev_private_route_table",
            "module.networking.aws_subnet.NexChange_dev_private_subtets",
            "module.networking.aws_subnet.NexChange_dev_public_subtets",
            "module.networking.aws_vpc.NexChange_dev_vpc_1_sg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a3a919cd2abde77",
            "route_table_id": "rtb-00cde3023476fd4a2",
            "subnet_id": "subnet-06f158a83ee5b4135"
          },
          "dependencies": [
            "module.networking.aws_eip.NexChange_dev_eip",
            "module.networking.aws_nat_gateway.NexChange_dev_nat",
            "module.networking.aws_route_table.NexChange_dev_private_route_table",
            "module.networking.aws_subnet.NexChange_dev_private_subtets",
            "module.networking.aws_subnet.NexChange_dev_public_subtets",
            "module.networking.aws_vpc.NexChange_dev_vpc_1_sg"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "NexChange_dev_public_route_table_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb3fcd598767f062",
            "route_table_id": "rtb-07c18ec17a56adf09",
            "subnet_id": "subnet-0b857427f5f230a33"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.NexChange_dev_igw",
            "module.networking.aws_route_table.NexChange_dev_public_route_table",
            "module.networking.aws_subnet.NexChange_dev_public_subtets",
            "module.networking.aws_vpc.NexChange_dev_vpc_1_sg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8b075bb6a1bc709",
            "route_table_id": "rtb-07c18ec17a56adf09",
            "subnet_id": "subnet-09e7b4d11f77a0593"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.NexChange_dev_igw",
            "module.networking.aws_route_table.NexChange_dev_public_route_table",
            "module.networking.aws_subnet.NexChange_dev_public_subtets",
            "module.networking.aws_vpc.NexChange_dev_vpc_1_sg"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "NexChange_dev_private_subtets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:654654583337:subnet/subnet-0cf889e7130c0b2ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "11.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf889e7130c0b2ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654583337",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "IsDefault": "true",
              "Name": "NexChange_dev_private_subnet_1"
            },
            "tags_all": {
              "Environment": "dev",
              "IsDefault": "true",
              "Name": "NexChange_dev_private_subnet_1"
            },
            "vpc_id": "vpc-0ba00ae94c7bef3c4"
          },
          "dependencies": [
            "module.networking.aws_vpc.NexChange_dev_vpc_1_sg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:654654583337:subnet/subnet-06f158a83ee5b4135",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "11.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f158a83ee5b4135",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654583337",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "IsDefault": "true",
              "Name": "NexChange_dev_private_subnet_2"
            },
            "tags_all": {
              "Environment": "dev",
              "IsDefault": "true",
              "Name": "NexChange_dev_private_subnet_2"
            },
            "vpc_id": "vpc-0ba00ae94c7bef3c4"
          },
          "dependencies": [
            "module.networking.aws_vpc.NexChange_dev_vpc_1_sg"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "NexChange_dev_public_subtets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:654654583337:subnet/subnet-0b857427f5f230a33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "11.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b857427f5f230a33",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654583337",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "IsDefault": "true",
              "Name": "NexChange_dev_public_subnet_1"
            },
            "tags_all": {
              "Environment": "dev",
              "IsDefault": "true",
              "Name": "NexChange_dev_public_subnet_1"
            },
            "vpc_id": "vpc-0ba00ae94c7bef3c4"
          },
          "dependencies": [
            "module.networking.aws_vpc.NexChange_dev_vpc_1_sg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:654654583337:subnet/subnet-09e7b4d11f77a0593",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "11.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e7b4d11f77a0593",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654583337",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "IsDefault": "true",
              "Name": "NexChange_dev_public_subnet_2"
            },
            "tags_all": {
              "Environment": "dev",
              "IsDefault": "true",
              "Name": "NexChange_dev_public_subnet_2"
            },
            "vpc_id": "vpc-0ba00ae94c7bef3c4"
          },
          "dependencies": [
            "module.networking.aws_vpc.NexChange_dev_vpc_1_sg"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "NexChange_dev_vpc_1_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:654654583337:vpc/vpc-0ba00ae94c7bef3c4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-043d450f09bf6a791",
            "default_route_table_id": "rtb-06da6cd97ba7239ec",
            "default_security_group_id": "sg-08648e3cc660f14e7",
            "dhcp_options_id": "dopt-05d9f87a583f8fddf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ba00ae94c7bef3c4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06da6cd97ba7239ec",
            "owner_id": "654654583337",
            "tags": {
              "Environment": "dev",
              "IsDefault": "true",
              "Name": "Dev-NexChange_vpc_1_sg"
            },
            "tags_all": {
              "Environment": "dev",
              "IsDefault": "true",
              "Name": "Dev-NexChange_vpc_1_sg"
            }
          }
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_jenkins_sg_name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:654654583337:security-group/sg-02ede09f4f1bcd09e",
            "description": "Allow port 8080 for jenkins",
            "egress": [],
            "id": "sg-02ede09f4f1bcd09e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from anywhere",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Allow port 8080 for jenkins",
            "name_prefix": "",
            "owner_id": "654654583337",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "IsDefault": "true",
              "Name": "Allow port 8080 for jenkins"
            },
            "tags_all": {
              "Environment": "dev",
              "IsDefault": "true",
              "Name": "Allow port 8080 for jenkins"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba00ae94c7bef3c4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.NexChange_dev_vpc_1_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg_ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:654654583337:security-group/sg-0b1c211d71d987525",
            "description": "Enable the Port 22(SSH) \u0026 Port 80(http)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outgoing request",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b1c211d71d987525",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG for EC2 to enable SSH(22), HTTPS(443) and HTTP(80)",
            "name_prefix": "",
            "owner_id": "654654583337",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "IsDefault": "true",
              "Name": "SG for EC2 to enable SSH(22), HTTPS(443) and HTTP(80)"
            },
            "tags_all": {
              "Environment": "dev",
              "IsDefault": "true",
              "Name": "SG for EC2 to enable SSH(22), HTTPS(443) and HTTP(80)"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba00ae94c7bef3c4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.NexChange_dev_vpc_1_sg"
          ]
        }
      ]
    }
  ]
}